# clean-architecture

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  pyproject.toml  test.py
src/infra/config/: __init__.py  db_config.py
src/infra/entities/: pets.py
src/infra/repository/: __init__.py  fake_repository.py  user_repository.py  user_repository_test.py
