[tool.poetry]
name = "clean-architecture"
version = "0.1.0"
description = ""
authors = ["Bruno <bruno.gluszczuk@pagar.me>"]

[tool.poetry.dependencies]
python = "^3.10"
pylint = "^2.14.3"
black = "^22.3.0"
flake8 = "^4.0.1"
pre-commit = "^2.19.0"
SQLAlchemy = "^1.4.39"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
